# ts-datapoint-selection-vis

./: .gitignore  README.md  makefile  pyproject.toml
agg_utils/: aggregators.py  conf.py  data_hepers.py  fig_construction.py  metrics.py  path_conf.py
details/: OR-conv_masking.md  vis_representativity.md  vis_stability.md
notebooks/: 0.1_Parse_DEBS_UCR_BTC.ipynb  0.2_Create_agg_data.ipynb  0.3_Fig_construction.ipynb  0.4_Fig_metrics.ipynb  1.2_Visual_stability.ipynb  README.md  construct_bokeh_figs.py  varia_OR_conv.ipynb  varia_pixelperfect_m4.ipynb  varia_toolkit_comparison.ipynb
